[package]
name = "clio"
description = "A library for parsing CLI file names"
keywords = ["cli", "stdin", "stdout"]
authors = ["AJ Bagwell <aj.bagwell@gmail.com>"]
license = "MIT"
version = "0.2.3"
repository = "https://github.com/aj-bagwell/clio"
documentation = "https://docs.rs/clio"
readme = "README.md"
edition = "2021"

[features]
http = []
http-curl = ["curl", "pipe", "http"]
http-ureq = ["ureq", "pipe", "http"]
clap-parse = ["clap"]

[dependencies]
curl = { version = "0.4", optional = true }
ureq = { version = "2.0", optional = true }
pipe = { version = "0.4", optional = true }
clap = { version = "3.2.1", features = ["derive"], optional = true}

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
clap = { version = "3.2", features = ["derive"] }
