[package]
name = "clio"
description = "A library for parsing CLI file names"
keywords = ["cli", "stdin", "stdout"]
authors = ["AJ Bagwell <aj.bagwell@gmail.com>"]
license = "MIT"
version = "0.2.6"
repository = "https://github.com/aj-bagwell/clio"
documentation = "https://docs.rs/clio"
readme = "README.md"
edition = "2021"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = ["http-ureq", "clap-parse"]

[features]
http = []
http-curl = ["curl", "pipe", "http"]
http-ureq = ["ureq", "pipe", "http"]
clap-parse = ["clap"]

[dependencies]
curl = { version = "0.4", optional = true }
ureq = { version = "2.0", optional = true }
pipe = { version = "0.4", optional = true }
clap = { version = ">=3.2, < 5.0", features = ["derive"], optional = true}

[target.'cfg(unix)'.dependencies]
libc = "0.2"
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.42", features = ["Win32_Foundation"] }

[dev-dependencies]
clap = { version = "3.2", features = ["derive"] }
tempfile = "3.3.0"
